--- a/html/calendar.html
+++ b/html/calendar.html
@@ -18,17 +18,17 @@ body {
   stroke-width: 2px;
 }
 
-.RdYlGn .q0-11{fill:rgb(165,0,38)}
-.RdYlGn .q1-11{fill:rgb(215,48,39)}
-.RdYlGn .q2-11{fill:rgb(244,109,67)}
-.RdYlGn .q3-11{fill:rgb(253,174,97)}
-.RdYlGn .q4-11{fill:rgb(254,224,139)}
-.RdYlGn .q5-11{fill:rgb(255,255,191)}
-.RdYlGn .q6-11{fill:rgb(217,239,139)}
-.RdYlGn .q7-11{fill:rgb(166,217,106)}
-.RdYlGn .q8-11{fill:rgb(102,189,99)}
-.RdYlGn .q9-11{fill:rgb(26,152,80)}
-.RdYlGn .q10-11{fill:rgb(0,104,55)}
+.q0 {fill:rgb(255,255,255)}
+.q1 {fill:rgb(255,245,240)}
+.q2 {fill:rgb(254,224,210)}
+.q3 {fill:rgb(252,187,161)}
+.q4 {fill:rgb(252,146,114)}
+.q5 {fill:rgb(251,106,74)}
+.q6 {fill:rgb(239,59,44)}
+.q7 {fill:rgb(203,24,29)}
+.q8 {fill:rgb(165,15,21)}
+.q9 {fill:rgb(103,0,13)}
+.q10 {fill:rgb(50,0,0)}
 
 </style>
 <body>
@@ -51,7 +51,7 @@ var day = d3.time.format("%w"),
 
 var color = d3.scale.quantize()
     .domain([0, maxCount])
-    .range(d3.range(11).map(function(d) { return "q" + d + "-11"; }));
+    .range(d3.range(11).map(function(d) { return "q" + d; }));
 
 var svg = d3.select("body").selectAll("svg")
     .data(d3.range(minYear, maxYear))
