--- a/html/pricebands.html
+++ b/html/pricebands.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<!DOCTYPE html><meta charset="utf-8"><style>
 
 body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: auto;
+  position: relative;
+  width: 960px;
+}
+
+text {
   font: 10px sans-serif;
 }
 
@@ -13,48 +18,19 @@ body {
   shape-rendering: crispEdges;
 }
 
-.bar {
-  fill: steelblue;
-}
-
-.x.axis path {
-  display: none;
+form {
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 
 </style>
-<body>
+<form>
+  <label><input type="radio" name="mode" value="grouped"> Grouped</label>
+  <label><input type="radio" name="mode" value="stacked" checked> Stacked</label>
+</form>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
-
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
-
-var x0 = d3.scale.ordinal()
-    .rangeRoundBands([0, width], .1);
-
-var x1 = d3.scale.ordinal();
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var color = d3.scale.ordinal()
-    .range([ "#d7191c", "#fdae61", "#ffffbf", "#abd9e9", "#2c7bb6" ]);
-
-var xAxis = d3.svg.axis()
-    .scale(x0)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left")
-    .tickFormat(d3.format(".2s"));
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 d3.csv("../data/pricebands.csv", function(error, data) {
   var bandNames = d3.keys(data[0]).filter(function(key) { return key !== "Year"; });
@@ -63,58 +39,112 @@ d3.csv("../data/pricebands.csv", function(error, data) {
     d.bands = bandNames.map(function(name) { return {name: name, value: +d[name]}; });
   });
 
-  x0.domain(data.map(function(d) { return d.Year; }));
-  x1.domain(bandNames).rangeRoundBands([0, x0.rangeBand()]);
-  y.domain([0, d3.max(data, function(d) { return d3.max(d.bands, function(d) { return d.value; }); })]);
+  var n = bandNames.length; // number of layers
+  var m = data.length; // number of samples per layer
+
+  var stack = d3.layout.stack();
+  var layers = stack(d3.range(n).map(function(col) {
+    return data.map(function(d, x) { 
+      return {x: x, y: d.bands[col].value};
+    });
+  }));
+
+  var yGroupMax = d3.max(layers, function(layer) { return d3.max(layer, function(d) { return d.y; }); }),
+      yStackMax = d3.max(layers, function(layer) { return d3.max(layer, function(d) { return d.y0 + d.y; }); });
+
+  var margin = {top: 40, right: 10, bottom: 20, left: 10},
+      width = 960 - margin.left - margin.right,
+      height = 500 - margin.top - margin.bottom;
+
+  var x = d3.scale.ordinal()
+      .domain(d3.range(m))
+      .rangeRoundBands([0, width], .08);
+
+  var y = d3.scale.linear()
+      .domain([0, yStackMax])
+      .range([height, 0]);
+
+  var color = d3.scale.linear()
+      .domain([0, n - 1])
+      .range(["#aad", "#556"]);
+
+  var xAxis = d3.svg.axis()
+      .scale(x)
+      .tickSize(0)
+      .tickPadding(6)
+      .orient("bottom");
+
+  var svg = d3.select("body").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  var layer = svg.selectAll(".layer")
+      .data(layers)
+    .enter().append("g")
+      .attr("class", "layer")
+      .style("fill", function(d, i) { return color(i); });
+
+  var rect = layer.selectAll("rect")
+      .data(function(d) { return d; })
+    .enter().append("rect")
+      .attr("x", function(d) { return x(d.x); })
+      .attr("y", height)
+      .attr("width", x.rangeBand())
+      .attr("height", 0);
+
+  rect.transition()
+      .delay(function(d, i) { return i * 10; })
+      .attr("y", function(d) { return y(d.y0 + d.y); })
+      .attr("height", function(d) { return y(d.y0) - y(d.y0 + d.y); });
 
   svg.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
       .call(xAxis);
 
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Transactions");
+  /*
+   *  transition
+   */
+  d3.selectAll("input").on("change", change);
 
-  var year = svg.selectAll(".year")
-      .data(data)
-    .enter().append("g")
-      .attr("class", "g")
-      .attr("transform", function(d) { return "translate(" + x0(d.Year) + ",0)"; });
+  var timeout = setTimeout(function() {
+    d3.select("input[value=\"grouped\"]").property("checked", true).each(change);
+  }, 2000);
 
-  year.selectAll("rect")
-      .data(function(d) { return d.bands; })
-    .enter().append("rect")
-      .attr("width", x1.rangeBand())
-      .attr("x", function(d) { return x1(d.name); })
-      .attr("y", function(d) { return y(d.value); })
-      .attr("height", function(d) { return height - y(d.value); })
-      .style("fill", function(d) { return color(d.name); });
 
-  var legend = svg.selectAll(".legend")
-      .data(bandNames.slice().reverse())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+  function change() {
+    clearTimeout(timeout);
+    if (this.value === "grouped") transitionGrouped();
+    else transitionStacked();
+  }
 
-  legend.append("rect")
-      .attr("x", width - 18)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
+  function transitionGrouped() {
+    y.domain([0, yGroupMax]);
 
-  legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 9)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d; });
+    rect.transition()
+        .duration(500)
+        .delay(function(d, i) { return i * 10; })
+        .attr("x", function(d, i, j) { return x(d.x) + x.rangeBand() / n * j; })
+        .attr("width", x.rangeBand() / n)
+      .transition()
+        .attr("y", function(d) { return y(d.y); })
+        .attr("height", function(d) { return height - y(d.y); });
+  }
+
+  function transitionStacked() {
+    y.domain([0, yStackMax]);
+
+    rect.transition()
+        .duration(500)
+        .delay(function(d, i) { return i * 10; })
+        .attr("y", function(d) { return y(d.y0 + d.y); })
+        .attr("height", function(d) { return y(d.y0) - y(d.y0 + d.y); })
+      .transition()
+        .attr("x", function(d) { return x(d.x); })
+        .attr("width", x.rangeBand());
+  }
 
 });
 
