Transition priceband axis

--- a/html/pricebands.html
+++ b/html/pricebands.html
@@ -166,8 +166,7 @@ d3.csv("../data/pricebands.csv", function(error, data) {
   }
 
   function transitionGrouped() {
-    y.domain([0, yGroupMax]);
-
+    transitionAxis(yGroupMax);
     rect.transition()
         .duration(500)
         .delay(function(d, i) { return i * 10; })
@@ -179,8 +178,7 @@ d3.csv("../data/pricebands.csv", function(error, data) {
   }
 
   function transitionStacked() {
-    y.domain([0, yStackMax]);
-
+    transitionAxis(yStackMax);
     rect.transition()
         .duration(500)
         .delay(function(d, i) { return i * 10; })
@@ -189,6 +187,16 @@ d3.csv("../data/pricebands.csv", function(error, data) {
       .transition()
         .attr("x", function(d) { return x(d.x); })
         .attr("width", x.rangeBand());
+  }
+
+  function transitionAxis(ymax) {
+    y.domain([0, ymax]);
+    yAxis.scale(y);
+    svg.select(".y")
+       .transition()
+       .duration(1500)
+       .ease("sin-in-out")
+       .call(yAxis);
   }
 
 });
