Closing html tags

--- a/html/calendar.html
+++ b/html/calendar.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+<head>
 <meta charset="utf-8">
 <style>
 
@@ -31,6 +33,7 @@ body {
 .q10 {fill:rgb(50,0,0)}
 
 </style>
+</head>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
@@ -114,3 +117,5 @@ function monthPath(t0) {
 d3.select(self.frameElement).style("height", "2910px");
 
 </script>
+</body>
+</html>
