--- a/html/pricegrid.html
+++ b/html/pricegrid.html
@@ -62,6 +62,7 @@ a {
   float: left;
   text-align: center;
   font-size: 4mm;
+  font-family: "Helvetica Neue", "Helvetica", sans-serif;
   color: #fff;
 }
 .blank {
