--- a/html/pricegridix.html
+++ b/html/pricegridix.html
@@ -87,15 +87,15 @@ h2 {
     text-align: center;
 }
 
-.q0 {background-color:rgb(255,245,240)}
-.q1 {background-color:rgb(254,224,210)}
-.q2 {background-color:rgb(252,187,161)}
-.q3 {background-color:rgb(252,146,114)}
-.q4 {background-color:rgb(251,106,74)}
-.q5 {background-color:rgb(239,59,44)}
-.q6 {background-color:rgb(203,24,29)}
-.q7 {background-color:rgb(165,15,21)}
-.q8 {background-color:rgb(103,0,13)}
+.q0 {background-color:#f7fcf5}
+.q1 {background-color:#e5f5e0}
+.q2 {background-color:#c7e9c0}
+.q3 {background-color:#a1d99b}
+.q4 {background-color:#74c476}
+.q5 {background-color:#41ab5d}
+.q6 {background-color:#238b45}
+.q7 {background-color:#006d2c}
+.q8 {background-color:#00441b}
 
 </style>
 </head>
